; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_coff-pe-read.c_pe_get32.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_coff-pe-read.c_pe_get32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @pe_get32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pe_get32(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [4 x i8], align 1
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @SEEK_SET, align 4
  %9 = call i32 @bfd_seek(i32* %6, i32 %7, i32 %8)
  %10 = getelementptr inbounds [4 x i8], [4 x i8]* %5, i64 0, i64 0
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @bfd_bread(i8* %10, i32 4, i32* %11)
  %13 = getelementptr inbounds [4 x i8], [4 x i8]* %5, i64 0, i64 0
  %14 = load i8, i8* %13, align 1
  %15 = zext i8 %14 to i32
  %16 = getelementptr inbounds [4 x i8], [4 x i8]* %5, i64 0, i64 1
  %17 = load i8, i8* %16, align 1
  %18 = zext i8 %17 to i32
  %19 = shl i32 %18, 8
  %20 = add nsw i32 %15, %19
  %21 = getelementptr inbounds [4 x i8], [4 x i8]* %5, i64 0, i64 2
  %22 = load i8, i8* %21, align 1
  %23 = zext i8 %22 to i32
  %24 = shl i32 %23, 16
  %25 = add nsw i32 %20, %24
  %26 = getelementptr inbounds [4 x i8], [4 x i8]* %5, i64 0, i64 3
  %27 = load i8, i8* %26, align 1
  %28 = zext i8 %27 to i32
  %29 = shl i32 %28, 24
  %30 = add nsw i32 %25, %29
  ret i32 %30
}

declare dso_local i32 @bfd_seek(i32*, i32, i32) #1

declare dso_local i32 @bfd_bread(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
